Started to create web pages for individual topics, updated ReadMe as well

--- a/advanced-js/exercises/index.html
+++ b/advanced-js/exercises/index.html
@@ -4,10 +4,59 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Advaned JS Exercise</title>
+		<title>Advanced JavaScript Exercises</title>
+		<link rel="stylesheet" href="./style-home.css" />
 	</head>
 	<body>
-		<!-- <script src="./exercise5.js"></script> -->
-		<script src="./finalExercise.js"></script>
+		<h1>Advanced JavaScript Exercises</h1>
+		<div class="container">
+			<ul>
+				<li>
+					<a href="./exercise1.html" target="_blank">Exercise 1 - Scope</a>
+				</li>
+				<li>
+					<a href="./exercise2.html" target="_blank"
+						>Exercise 2 - Advanced Control Flow</a
+					>
+				</li>
+				<li>
+					<a href="./exercise3.html" target="_blank">Exercise 3 - ES5 & ES6</a>
+				</li>
+				<li>
+					<a href="./exercise4.html" target="_blank"
+						>Exercise 4 - Advanced Functions</a
+					>
+				</li>
+				<li>
+					<a href="./exercise5.html" target="_blank"
+						>Exercise 1 - Advanced Arrays</a
+					>
+				</li>
+				<li>
+					<a href="./exercise6.html" target="_blank"
+						>Exercise 1 - Advanced Objects</a
+					>
+				</li>
+				<li>
+					<a href="./exerciseES7.html" target="_blank">Exercise 7 - ES7</a>
+				</li>
+				<li>
+					<a href="./exerciseES8.html" target="_blank">Exercise 8 - ES8</a>
+				</li>
+				<li>
+					<a href="./exerciseES10.html" target="_blank">Exercise 9 - ES10</a>
+				</li>
+				<li>
+					<a href="./exerciseLooping.html" target="_blank"
+						>Exercise 10 - Advanced Loops</a
+					>
+				</li>
+				<li>
+					<a href="./exerciseES2020.html" target="_blank"
+						>Exercise 11 - ES2020</a
+					>
+				</li>
+			</ul>
+		</div>
 	</body>
 </html>
